# localTranscript

./: CLAUDE.md  README.md  main.py  pyproject.toml
local_transcript/: constants.py  cuda.py  gui.py  logging_setup.py  transcriber.py  utils.py
src/: constants.py  cuda.py  diarizer.py  gui.py  logging_setup.py  settings_manager.py  summarizer.py  transcriber.py  utils.py  youtube.py
