[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-transcript-studio"
version = "0.1.0"
description = "Local AI-powered audio/video transcription with multi-speaker support"
requires-python = ">=3.9"
dependencies = [
    "faster-whisper>=1.0.0",
    "tkinterdnd2",
    "yt-dlp",
    "pyannote-audio",
]

[project.scripts]
local-transcript = "src.gui:main"

[tool.setuptools]
py-modules = ["src.gui"]

[project.urls]
Repository = "https://github.com/z-soham/localTranscript"